# hangul_typing_tutor

./: .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  README.md  create_venv.sh  db.sqlite3  django_shell.sh  install_poetry.py  local_build.sh  local_reset_migrations.sh  local_run.sh  make_migrations.sh  manage.py  migrate.sh  pyproject.toml  render.yaml  render_build.sh  render_celery_run.sh  render_predeploy.sh  render_run.sh  render_service_build.sh  render_service_run.sh  run.sh  run_server.sh  setup.sh
.github/workflows/: python-app.yml
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_typingspeed.py  0003_remove_challenge_active_remove_challengegroup_active_and_more.py
api/tests/: test_views.py
bruno/: bruno.json  start_debug_task.bru
challenges/: admin.py  models.py  serializers.py  urls.py  views.py
challenges/migrations/: 0001_initial.py
challenges/templates/challenges/: challenge.html
core/: models.py
frontend/: urls.py  views.py
frontend/templates/frontend/: index.html  tutor.html
hangul_tutor/: __init__.py  asgi.py  celery.py  manage.py  settings.py  urls.py  wsgi.py
hangul_tutor/django_base/: asgi.py  settings.py  urls.py  wsgi.py
hangul_tutor/hangul_tutor/: asgi.py  settings.py  urls.py  wsgi.py
hangul_tutor/hangul_tutor_app/: admin.py  apps.py  models.py  urls.py  views.py
hangul_tutor/hangul_tutor_app/migrations/: 0001_initial.py
hangul_tutor/hangul_tutor_app/templates/hangul_tutor_app/: detail.html  index.html  results.html
marketing/: urls.py  views.py
marketing/templates/marketing/: index.html
marketing/tests/: test_something.py
static/drf_spectacular_sidecar/redoc/bundles/: redoc.standalone.js.map
templates/: base.html
templates/account/: email_confirm.html  login.html  logout.html  signup.html  verification_sent.html
