[tool.poetry]
name = "hangul-tutor"
version = "0.1.0"
description = "A Hangul Typing Tutor"
authors = ["Joshua Szepietowski <joshszep@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.6"
djangorestframework = "^3.15.2"
uuid7 = "^0.1.0"
drf-yasg = "^1.21.7"
setuptools = "^70.2.0"
drf-spectacular = {extras = ["sidecar"], version = "^0.27.2"}

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pre-commit = "^3.7.1"
pytest = "^8.2.2"
pytest-django = "^4.8.0"
pyright = "^1.1.368"
ruff = "^0.4.10"
django-stubs = "^5.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true
exclude = ["**/migrations/**"]

[tool.django-stubs]
django_settings_module = "hangul_tutor.settings"

[tool.isort]
force_single_line = true  # Force all imports to be on one line.
use_parentheses = true
line_length = 88
multi_line_output = 3
skip_gitignore = true
lines_after_imports = 2
honor_noqa = true
overwrite_in_place = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "hangul_tutor.settings"
python_files = "test_*.py *_test.py"
